@@ -1,19 +1,19 @@
 /*
- *     Copyright (C) 2021 Parisi Alessandro
- *     This file is part of MaterialFX (https://github.com/palexdev/MaterialFX).
+ * Copyright (C) 2021 Parisi Alessandro
+ * This file is part of MaterialFX (https://github.com/palexdev/MaterialFX).
  *
- *     MaterialFX is free software: you can redistribute it and/or modify
- *     it under the terms of the GNU General Public License as published by
- *     the Free Software Foundation, either version 3 of the License, or
- *     (at your option) any later version.
+ * MaterialFX is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- *     MaterialFX is distributed in the hope that it will be useful,
- *     but WITHOUT ANY WARRANTY; without even the implied warranty of
- *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *     GNU General Public License for more details.
+ * MaterialFX is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
  *
- *     You should have received a copy of the GNU General Public License
- *     along with MaterialFX.  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with MaterialFX.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 package io.github.palexdev.materialfx.controls;
@@ -33,6 +33,8 @@ import javafx.scene.control.Skin;
 import javafx.scene.paint.Color;
 import javafx.scene.paint.Paint;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -259,7 +261,13 @@ public class MFXButton extends Button {
             this,
             "buttonType",
             ButtonType.FLAT
-    );
+    ) {
+        @Override
+        public void set(ButtonType v) {
+            if (v == ButtonType.FLAT) setEffect(null);
+            super.set(v);
+        }
+    };
 
     public DepthLevel getDepthLevel() {
         return depthLevel.get();
@@ -290,6 +298,9 @@ public class MFXButton extends Button {
      * - {@code FLAT}
      * <p>
      * - {@code RAISED}
+     * <p></p>
+     * If the new type is {@code FLAT} then setEffect(null) is called so that a user can also
+     * specify it's own effects for the button.
      */
     public StyleableObjectProperty<ButtonType> buttonTypeProperty() {
         return buttonType;
@@ -321,7 +332,9 @@ public class MFXButton extends Button {
                         ButtonType.FLAT);
 
         static {
-            cssMetaDataList = List.of(DEPTH_LEVEL, BUTTON_TYPE);
+            List<CssMetaData<? extends Styleable, ?>> btnCssMetaData = new ArrayList<>(Button.getClassCssMetaData());
+            Collections.addAll(btnCssMetaData, DEPTH_LEVEL, BUTTON_TYPE);
+            cssMetaDataList = Collections.unmodifiableList(btnCssMetaData);
         }
 
     }
