@@ -1,19 +1,19 @@
 /*
- *     Copyright (C) 2021 Parisi Alessandro
- *     This file is part of MaterialFX (https://github.com/palexdev/MaterialFX).
+ * Copyright (C) 2021 Parisi Alessandro
+ * This file is part of MaterialFX (https://github.com/palexdev/MaterialFX).
  *
- *     MaterialFX is free software: you can redistribute it and/or modify
- *     it under the terms of the GNU General Public License as published by
- *     the Free Software Foundation, either version 3 of the License, or
- *     (at your option) any later version.
+ * MaterialFX is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- *     MaterialFX is distributed in the hope that it will be useful,
- *     but WITHOUT ANY WARRANTY; without even the implied warranty of
- *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *     GNU General Public License for more details.
+ * MaterialFX is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
  *
- *     You should have received a copy of the GNU General Public License
- *     along with MaterialFX.  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with MaterialFX.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 package io.github.palexdev.materialfx.controls;
@@ -28,6 +28,8 @@ import javafx.scene.control.Skin;
 import javafx.scene.control.ToggleButton;
 import javafx.scene.shape.StrokeType;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -190,12 +192,11 @@ public class MFXCircleToggleNode extends AbstractMFXToggleNode {
                 );
 
         static {
-            cssMetaDataList = List.of(
-                    SIZE, TEXT_POSITION,
-                    STROKE_WIDTH, STROKE_TYPE
-            );
+            List<CssMetaData<? extends Styleable, ?>> mfxTonCssMetaData = new ArrayList<>(AbstractMFXToggleNode.getClassCssMetaData());
+            Collections.addAll(mfxTonCssMetaData, SIZE, TEXT_POSITION, STROKE_WIDTH, STROKE_TYPE);
+            cssMetaDataList = Collections.unmodifiableList(mfxTonCssMetaData);
         }
-                
+
     }
 
     public static List<CssMetaData<? extends Styleable, ?>> getControlCssMetaDataList() {
